--- a/FinalReport.html
+++ b/FinalReport.html
@@ -410,6 +410,7 @@ rowPerc(table1)</code></pre>
 ##   False  34.78  56.77
 ##   True   65.22  43.23
 ##   Total 100.00 100.00</code></pre>
+<p>The results show 91.67 percent of people who do not believe in the Big Bang Theory do believe in an afterlife. Also, 81.71 percent of people who do believe in the Big Bang Theory also believe in an afterlife. With this in mind, it does not appear that there is a relationship between the two beliefs.</p>
 </div>
 </div>
 <div id="inferential-results" class="section level2">
